force-app/main/default/objects/Collection_Visit__c/Collection_Visit__c.object-meta.xml
<CustomObject>
    <label>Collection Visit</label>
    <nameField>
        <displayFormat>CV -  {0000}</displayFormat>
        <label>Collection Visit id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>