force-app/main/default/objects/Collection_Visit__c/fields/Collection_Executive__c.field-meta.xml
<CustomField>
    <fullName>Collection_Executive__c</fullName>
    <label>Collection Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jinin</fullName>
            </value>
            <value>
                <fullName>Gireesh</fullName>
            </value>
            <value>
                <fullName>Sunilkumar</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>