force-app/main/default/objects/Collection_Visit__c/fields/Collection_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Executive_Name__c</fullName>
    <label>Collection Executive Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>