force-app/main/default/objects/Collection_Visit__c/fields/Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Collection_Type__c</fullName>
    <label>Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash at Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>