force-app/main/default/objects/Collection_Visit__c/fields/Due_Date_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Change_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Due Date Change Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>