force-app/main/default/objects/Collection_Visit__c/fields/Reminder_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Notification Sent</label>
    <type>Checkbox</type>
</CustomField>