force-app/main/default/objects/Collection_Visit__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Confirmation__c</referenceTo>
    <relationshipLabel>Collection Visits</relationshipLabel>
    <relationshipName>Collection_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>